added db config